k8s/portfolio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-ui
  template:
    metadata:
      labels:
        app: portfolio-ui
    spec:
      containers:
        - name: portfolio-ui
          image: ghcr.io/janne6565/projektejwkk-new:sha-dda164c
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
