k8s/portfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ui
spec:
  selector:
    app: portfolio-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
