k8s/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ui-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jannekeipert.de
      secretName: multi-domain-cert
  rules:
    - host: jannekeipert.de
      http:
        paths:
          - backend:
              service:
                name: portfolio-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
